@@ -6,11 +6,11 @@ import com.curso.services.UserDetailsServiceImpl;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.core.env.Environment;
+import org.springframework.http.HttpMethod;
 import org.springframework.security.authentication.AuthenticationManager;
-import org.springframework.security.config.annotation.authentication.builders.AuthenticationManagerBuilder;
-import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
-import org.springframework.security.config.annotation.web.configuration.WebSecurityCustomizer;
+import org.springframework.security.config.annotation.authentication.configuration.AuthenticationConfiguration;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
+import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
 import org.springframework.security.config.http.SessionCreationPolicy;
 import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
 import org.springframework.security.crypto.password.PasswordEncoder;
@@ -20,64 +20,55 @@ import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
-import java.util.Arrays;
+import java.util.List;
 
 @Configuration
 @EnableWebSecurity
 public class SecurityConfig {
 
-    private static final String[] PUBLIC_URLS = {
-            // Swagger / OpenAPI
-            "/v3/api-docs/**",
-            "/swagger-ui/**",
-            "/swagger-ui.html",
-            // Auth / utilidades
-            "/auth/**",
-            "/login",
-            "/h2-console/**"
-    };
+private static final String[] PUBLIC_URLS = {
+    "/h2-console/**",
+    "/auth/**",
+    "/api/auth/**",                 
+    "/swagger-ui/**", "/v3/api-docs/**", "/v3/api-docs.yaml",
+    "/api/swagger-ui/**", "/api/v3/api-docs/**" 
+};
 
     private final Environment env;
     private final JWTUtils jwtUtils;
     private final UserDetailsServiceImpl userDetailsService;
 
-    public SecurityConfig(Environment env, JWTUtils jwtUtils, UserDetailsServiceImpl userDetailsService) {
+    public SecurityConfig(Environment env, JWTUtils jwtUtils, UserDetailsServiceImpl uds) {
         this.env = env;
         this.jwtUtils = jwtUtils;
-        this.userDetailsService = userDetailsService;
+        this.userDetailsService = uds;
     }
 
-    // BYPASS total das rotas públicas (Swagger/H2) — elas nem entram no filtro de segurança
-    @Bean
-    public WebSecurityCustomizer webSecurityCustomizer() {
-        return web -> web.ignoring().requestMatchers(
-                "/v3/api-docs/**",
-                "/swagger-ui/**",
-                "/swagger-ui.html",
-                "/h2-console/**"
-        );
-    }
+    
 
     @Bean
-    public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
-
-        if (Arrays.asList(env.getActiveProfiles()).contains("test")) {
-            http.headers(h -> h.frameOptions(f -> f.disable()));
-        }
-
+    public SecurityFilterChain filterChain(HttpSecurity http) throws Exception {
+        // CSRF off (API stateless) e CORS on
         http.csrf(csrf -> csrf.disable());
-        http.cors(c -> c.configurationSource(corsConfigurationSource()));
-        http.sessionManagement(s -> s.sessionCreationPolicy(SessionCreationPolicy.STATELESS));
+        http.cors(cors -> cors.configurationSource(corsConfigurationSource()));
 
-        // 🔴 UM ÚNICO BLOCO e ORDEM CORRETA:
+        // Stateless
+        http.sessionManagement(sm -> sm.sessionCreationPolicy(SessionCreationPolicy.STATELESS));
+
+        // Autorização
         http.authorizeHttpRequests(auth -> auth
                 .requestMatchers(PUBLIC_URLS).permitAll()
+                .requestMatchers(HttpMethod.OPTIONS, "/**").permitAll()
+                // (opcional para teste: libere GET de bancos)
+                // .requestMatchers(HttpMethod.GET, "/api/bancos/**").permitAll()
                 .anyRequest().authenticated()
         );
 
-        // filtro JWT
-        http.addFilterBefore(new JWTAuthenticationFilter(jwtUtils, userDetailsService),
-                UsernamePasswordAuthenticationFilter.class);
+        // Filtro JWT antes do UsernamePasswordAuthenticationFilter
+        http.addFilterBefore(
+    new JWTAuthenticationFilter(jwtUtils),
+    UsernamePasswordAuthenticationFilter.class
+);
 
         return http.build();
     }
@@ -85,23 +76,21 @@ public class SecurityConfig {
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration cfg = new CorsConfiguration();
-        cfg.setAllowedOrigins(Arrays.asList("*"));
-        cfg.setAllowedMethods(Arrays.asList("GET","POST","PUT","DELETE","OPTIONS"));
-        cfg.setAllowedHeaders(Arrays.asList("Authorization","Content-Type"));
+        cfg.setAllowedOriginPatterns(List.of("*")); // ou "http://localhost:4200"
+        cfg.setAllowedMethods(List.of("GET","POST","PUT","DELETE","PATCH","OPTIONS"));
+        cfg.setAllowedHeaders(List.of("Authorization","Content-Type","Accept"));
+        cfg.setExposedHeaders(List.of("Authorization"));
+        cfg.setAllowCredentials(false);
+
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", cfg);
         return source;
     }
 
-    @Bean
-    public AuthenticationManager authenticationManager(HttpSecurity http) throws Exception {
-        AuthenticationManagerBuilder b = http.getSharedObject(AuthenticationManagerBuilder.class);
-        b.userDetailsService(userDetailsService).passwordEncoder(passwordEncoder());
-        return b.build();
-    }
+    @Bean public PasswordEncoder passwordEncoder() { return new BCryptPasswordEncoder(); }
 
     @Bean
-    public PasswordEncoder passwordEncoder() {
-        return new BCryptPasswordEncoder();
+    public AuthenticationManager authenticationManager(AuthenticationConfiguration cfg) throws Exception {
+        return cfg.getAuthenticationManager();
     }
 }
